--- a/untukmu/index.html
+++ b/untukmu/index.html
@@ -19,7 +19,17 @@ Mau custom web ucapan online & tanpa watermark? Order Aja di Deka Tutorial !! (D
     </div>
 
     <script>
-      ucapan = ``;
+      ucapan = `bebe sayang
+      maafin aku yah aku belum pernah
+      kasih kamu bunga sebelumnya
+      selama ini pacaran sama kamu
+      bukan aku ngga sayang sama kamu
+      tapi aku mau banget ngasih sayang
+      ada momennya pasti aku kasih
+      maaf yah sayang
+      aku janji bakal kasih kamu
+      bunga yang gede
+      love you`;
       musik = ``;
       nomorWhatsapp = ``;
       idTelegram = ``;
@@ -28,3 +38,4 @@ Mau custom web ucapan online & tanpa watermark? Order Aja di Deka Tutorial !! (D
     </script>
   </body>
 </html>
+
